--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@ctrl/tinycolor": "^4.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "umbrella-library": "^2.3.33",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
